# routes/shotgun.route.js
@@ -12,8 +12,13 @@ module.exports = app => {
   // Update a Shotgun with id
   router.put("/:id", shotgun.updateshotgun);
 
+  router.get("/", shotgun.findAll);
+
   // Delete a Shotgun with id
   router.delete("/:id", shotgun.deleteshotgun);
+
+   // Retrieve a single Shotgun with id
+   router.get("/shotlist/:username", shotgun.findListshotgun);
 
   app.use('/api/shotgun', router);
 };
